--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-body,
-html {
+body,html {
     margin: 0;
     color: #444;
     height: 100%;
-    width:100%;
+    width: 100%;
     background-color: #fff;
     line-height: 30px;
     text-decoration: none;
@@ -13,7 +12,6 @@ img {
     max-width: 100%;
     height: auto;
 }
-
 
 header.navbar-fixed-top {
     animation-duration: 1s;
@@ -147,7 +145,7 @@ header {
     background: rgba(255, 255, 255, 0) none repeat fixed 0 0;
     position: absolute;
     top: 0;
-    padding: 20px 0;
+    padding: 15px 0;
     width: 100%;
     z-index: 99;
     line-height: 30px;
@@ -157,6 +155,11 @@ header {
 header .dark-logo {
     opacity: 0;
     display: none;
+    margin-top: 10px;
+}
+
+header .light-logo {
+    margin-top: 10px;
 }
 
 .menu-links {
@@ -167,21 +170,22 @@ header .dark-logo {
     display: inline-block;
     margin-right: 15px;
     position: relative;
-    padding-top: 20px;
+    padding-top: 15px;
 }
 
 .menu-links ul li a {
-    font-family: sans-serif;
-    padding: 10px;
+    font-family: 'open sans', 'sans-serif';
+    padding: 0px 15px;
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .menu-links ul li:hover > a {
-    color: #26A69A;
+    color: #6fa9a7;
 }
+
 
 /* Responsive Menu */
 
@@ -191,15 +195,8 @@ header .dark-logo {
 }
 
 .navbar.navbar-inverse {
-    margin:0;
+    margin: 0;
 }
-
-
-
-
-
-
-
 
 
 /* Jumbotron Section */
@@ -229,7 +226,6 @@ header .dark-logo {
     text-align: center;
     text-decoration: none;
 }
-
 
 .jumbotron-content ul {
     margin-top: 82px;
@@ -284,7 +280,7 @@ header .dark-logo {
 
 .jumbotron-buttons a {
     padding: 14px 30px;
-    font-family: 'dosis';
+    font-family: 'open sans';
     font-size: 20px;
     text-decoration: none;
     margin: 20px 10px;
@@ -315,90 +311,58 @@ header .dark-logo {
     border: 2px solid #555;
 }
 
-@media screen and (max-width: 900px) and (min-width: 320px) {
-    .jumbotron-content h1 {
-        font-size:30px;
-
-}
-   .jumbotron-buttons a {
-    padding:8px 18px;
-    font-size:14px;
-   }
-
-   .btn-large.btn-jumbo {
-    
-    margin-left: 40px;
-}
-
-}
-
-
 
 /* End Jumbotron */
 
 
-/* Services +Welcome Sections */
+/* Welcome Section */
 
 .welcome {
-    background-image:url("http://i64.tinypic.com/2im2yd2.jpg");
-    
-    padding: 60px;
+    background-image: url("http://i64.tinypic.com/2im2yd2.jpg");
+    margin-top: 40px;
+    padding: 0;
     animation-duration: 1s;
     animation-name: fadeInLeft;
     animation-timing-function: ease-in-out;
 }
 
 .welcome-main-header {
-    font-size: 32px;
-    line-height: 32px;
-    font-family: 'open sans', 'sans-serif';
+    font-size: 35px;
+    line-height: 30px;
+    font-family: 'roboto', 'sans-serif';
     color: #3d3d3d;
     margin-bottom: 30px;
-    font-weight:500;
-    text-align:center;
+    font-weight: 500;
+    text-align: center;
     padding: 0;
 }
 
-
+.welcome-main-header span {
+    color: #6fa9a7;
+}
 
 .welcome-header {
-    font-family:'Roboto', 'sans-serif';
-    font-size:42px;
-    line-height:42px;
-    color:#3d3d3d;
-    text-align:center;
-    padding:0px 120px;
-
-
+    font-family: 'open sans', 'sans-serif';
+    font-size: 24px;
+    line-height: 45px;
+    color: #3d3d3d;
+    text-align: center;
+    padding: 0px 20px;
 }
 
 .welcome-header span {
     font-family: 'cabin sketch';
-    font-size:40px;
-}
-
-
-.welcome p {
-    font-size: 20px;
-    line-height: 26px;
-    font-family: 'open sans', 'sans-serif';
-    color: #3d3d3d;
-    margin-bottom: 30px;
-    padding: 0;
-    font-weight:400;
-    text-align: center;
-    padding:10px 190px;
+    font-size: 40px;
 }
 
 .welcome:after {
     display: block;
-    position: absolute;
+    position: relative;
     content: '';
     width: 50px;
     height: 50px;
-    bottom: -400px;
-    left: 50%;
-    margin-left: -25px;
+    bottom: -25px;
+    left: 48%;
     background-color: #fff;
     -ms-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
@@ -409,219 +373,167 @@ header .dark-logo {
 
 /* Services Section */
 
-
-
-.services{
-    background-image:url("http://i64.tinypic.com/2a9brz7.jpg");
-    padding:30px 120px;
+.services {
+    background-image: url("http://i64.tinypic.com/2a9brz7.jpg");
+    padding: 30px 0px;
 }
-
 
 .services-heading {
     color: #6fa9a7;
     text-align: center;
     font-family: 'open sans', 'sans-serif';
-    font-weight:600;
-    padding-top:30px;
+    padding-top: 50px;
     font-size: 30px;
 }
 
 .services-subheader {
     font-family: 'open sans', 'sans-serif';
-    font-weight:600;
-    color:#3d3d3d;
-    font-size:26px;
-    font-style:italic;
-    text-align:center;
-    
-
-}
-
-.services-paragraph{
-    font-family:'open sans condensed', 'sans-serif';
-    font-weight:400;
-    color:#444;
-    font-size:20px;
+    font-weight: 600;
+    color: #3d3d3d;
+    font-size: 26px;
     text-align: center;
-    padding:0 100px;
-    padding-bottom:40px;
 }
+
+.services-paragraph {
+    font-family: 'open sans condensed', 'sans-serif';
+    font-weight: 400;
+    color: #444;
+    font-size: 20px;
+    text-align: center;
+    padding: 0 100px;
+    padding-bottom: 40px;
+}
+
 .service {
     text-align: center;
-    padding-top:0px;
+    padding-top: 0px;
+    margin: 20px;
 }
 
 .services .services-heading {
     font-family: 'open sans condensed', 'sans-serif';
-    font-size:40px;
-
+    font-size: 40px;
 }
 
 .service .service-content h3 {
     color: #3d3d3d;
-    font-size:18px;
-    font-weight:600;
-    font-family:'open sans';
+    font-size: 18px;
+    font-weight: 600;
+    font-family: 'open sans';
 }
 
 .service .service-content p {
     font-family: 'open sans condensed', 'sans-serif';
     color: #444;
-    font-size:16px;
+    font-size: 16px;
 }
 
 .service .service-icon i {
     color: #6fa9a7;
     font-size: 60px;
     text-align: center;
+    padding: 15px;
 }
 
-.service:hover .service-icon i{
-    -webkit-animation: spin 0.5s linear;
-   -moz-animation: spin 0.5s linear;
-   -o-animation: spin 0.5s linear;
-   animation: spin 0.5s linear;
-   animation-iteration-count: 1;
+.service .service-icon .mobile-icon {
+    padding: 10px;
+    font-size: 70px;
+}
 
+.service:hover .service-icon i {
+    -webkit-animation: spin 0.5s linear;
+    -moz-animation: spin 0.5s linear;
+    -o-animation: spin 0.5s linear;
+    animation: spin 0.5s linear;
+    animation-iteration-count: 1;
 }
 
 @-moz-keyframes spin {
-    from { -moz-transform: rotate(0deg); }
-    to { -moz-transform: rotate(360deg); }
-}
-@-webkit-keyframes spin {
-    from { -webkit-transform: rotate(0deg); }
-    to { -webkit-transform: rotate(360deg); }
-}
-@keyframes spin {
-    from {transform:rotate(0deg);}
-    to {transform:rotate(360deg);}
+    from {
+        -moz-transform: rotate(0deg);
+    }
+    to {
+        -moz-transform: rotate(360deg);
+    }
 }
 
+@-webkit-keyframes spin {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
 
 .services-btn {
-    margin:50px;
+    margin: 50px;
     text-align: center;
-
 }
 
 .services-btn a {
-    background-color:#6fa9a7;
-    color:#fff;
-    padding:10px 30px;
-    margin:8px;
+    background-color: #6fa9a7;
+    color: #fff;
+    padding: 10px 30px;
+    margin: 8px;
     text-decoration: none;
-    font-family:'open sans', 'sans-serif';
-    font-size:16px;
-
-
+    font-family: 'open sans', 'sans-serif';
+    font-size: 16px;
 }
 
 .services-btn a:hover {
-    background-color:#7ac3c0;
+    background-color: #7ac3c0;
 }
 
 
+/* sm */
 
-
-
-/* Portfolio Section */
-
-.portfolio-section {
-    background-color: #fff;
-    padding:40px;
+@media screen and (min-width: 768px) {
+    {
+        font-size: 1em;
+    }
 }
 
 
+/* md */
 
-.portfolio-section h2 {
-    
-    margin-top:40px;
-    text-align: center;
-    font-size: 35px;
-    font-family: 'open sans', 'sans-serif';
+@media screen and (min-width: 992px) {
+    {
+        font-size: 1.2em;
+    }
 }
 
 
+/* lg */
 
-
-
-.btn_large {
-    margin: 30px;
-    padding: 20px 30px;
-    font-size: 18px;
-    border: 2px solid #444;
-    text-transform: uppercase;
-    font-family: 'lato';
-    color: #4E4E4E;
-    background-color: rgba(255, 255, 255, 0);
+@media screen and (min-width: 1200px) {
+    {
+        font-size: 1.3em;
+    }
 }
-
-.btn_large:hover {
-    background-color: #444;
-    color: #fff;
-}
-
-
-.image {
-    height:30vh;
-    width: 100%;
-    padding: 0;
-    -webkit-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
-    box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
-}
-
-.portfolio-image a img:hover {
-        filter: grayscale(100%);
-
-}
-
-.portfolio-header {
-    text-align: center;
-    font-size: 14px;
-    font-family: 'Open Sans', sans-serif;
-    margin: 5px;
-    color:#555;
-}
-.portfolio-divider {
-    text-align:center;
-    margin-top:20px;
-}
-
-
-.portfolio-subheader {
-    color:#555;
-    font-size:18px;
-    font-family:'open sans', 'sans serif';
-    font-weight:600;
-    text-align:center;
-}
-
-.portfolio-header-section h2 {
-    text-align: center;
-    font-family: 'Roboto', 'sans-serif';
-    font-size: 35px;
-    color:#232929;
-}
-
 
 
 /* Get A Quote Section */
 
 .work-with-us {
-    background-color:#3d3d3d;
-    
-    
+    background-color: #3d3d3d;
 }
 
 .work-text {
-    font-size:28px;
-    color:#fff;
-    font-weight:400;
-    margin-top:45px;
-    font-family:'open sans condensed';
-
+    font-size: 28px;
+    color: #fff;
+    font-weight: 400;
+    margin: 45px 0;
+    font-family: 'open sans condensed';
 }
 
 .btn_large.quote_btn {
@@ -639,79 +551,311 @@ header .dark-logo {
 .btn_large.quote_btn:hover {
     background-color: rgba(255, 255, 255, 1);
     color: #444;
-    border:2px solid #fff;
+    border: 2px solid #fff;
     font-size: 22px;
     font-family: 'Roboto', sans-serif;
 }
-.skills-section{
-    background-color:#eee;
-   margin:30px;
+
+
+/* Portfolio Section */
+
+.portfolio-section {
+    background-color: #fff;
+    margin-top: 50px;
+    margin-bottom: 100px;
 }
+
+.portfolio-header h2 {
+    margin: 20px;
+    text-align: center;
+    font-family: 'Roboto', 'sans-serif';
+    font-size: 35px;
+    color: #232929;
+}
+
+.portfolio-header-text {
+    text-align: center;
+    font-size: 16px;
+    font-family: 'open sans', 'sans-serif';
+    font-weight: 600;
+    margin-bottom: 50px;
+}
+
+.image {
+    height: 30vh;
+    width: 100%;
+    padding: 0;
+    -webkit-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+}
+
+.portfolio-image a img:hover {
+    filter: grayscale(100%);
+}
+
+.portfolio-website {
+    text-align: center;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 15px;
+    color: #555;
+}
+
+.portfolio-website-type {
+    color: #555;
+    font-size: 18px;
+    font-family: 'open sans', 'sans serif';
+    font-weight: 600;
+    text-align: center;
+}
+
+
+/* Skills Section */
+
+.our_skills {
+    background-color:#eee;
+    padding-top: 40px;
+    padding-bottom: 120px;
+}
+
+.header_section {
+    font-family: 'roboto';
+    color: #666;
+    text-align: center;
+    font-family: 'open sans', 'sans-serif';
+    font-size: 30px;
+    padding: 0px;
+}
+
+.header_section p {
+    font-size: 16px;
+    font-family: 'open sans', 'sans-serif';
+    font-weight: 600;
+    text-align: center;
+    color: #666;
+    margin-bottom: 30px;
+}
+
+.skills_logos {
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    -webkit-transition: all 1s linear;
+    -moz-transition: all 1s linear;
+    -o-transition: all 1s linear;
+    transition: all 1s linear;
+    background: #fff;
+    max-width: 80%;
+}
+
+.skills_logos .skilltypes {
+    opacity: 1;
+    margin: 0 auto;
+    transform: scale(0.7);
+    -webkit-transition: all 300ms linear;
+    -moz-transition: all 300ms linear;
+    -o-transition: all 300ms linear;
+    transition: all 300ms linear;
+}
+
+.skills_logos .skilltypes:hover {
+    transform: scale(1);
+}
+
+.skilltypes {
+    display: inline;
+    overflow: hidden;
+}
+
+.our_skills:before {
+    display: block;
+    position: relative;
+    content: '';
+    width: 50px;
+    height: 50px;
+    bottom: 70px;
+    left: 48%;
+    background-color: #fff;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    z-index: 1;
+}
+
+
+/*Choose-us-section*/
+
+.choose-us-main-header{
+    font-size:35px;
+    font-family:'roboto';
+    color:#232929;
+    text-align:center;
+    padding-top:60px;
+}
+
+.choose-us-header-text {
+    font-family:'open sans';
+    text-align: center;
+    font-size:16px;
+    padding:20px 80px;
+    color:#888;
+}
+.choose-us .why-choose {
+    position: relative;
+    width: 100%;
+    margin-bottom: 60px;
+}
+
+
+
+
+
+.why-choose-header.header-right {
+    margin-right:40px;
+}
+
+.why-choose-header.header-left {
+    margin-left:40px;
+}
+
+.why-choose h5 {
+    color: #232929;
+    font-size: 18px;
+    font-family: 'open sans';
+    font-weight:600;
+}
+
+.why-choose a {
+    text-decoration: none;
+}
+
+.why-choose a:hover h5 {
+    color: #6fa9a7;
+}
+
+.why-choose p {
+    font-family: 'open sans', 'sans-serif';
+    font-size: 12px;
+    color:#888;
+}
+
+.choose-us .why-choose-header.header-left {
+    text-align: left;
+    padding-right: 30px;
+}
+
+.choose-us .why-choose-header.header-right {
+    text-align: right;
+}
+
+.choose-us .why-choose.why-choose-left,
+.choose-us .why-choose.why-choose-right {
+    padding-left: 100px;
+    text-align: left;
+}
+
+.choose-us .why-choose .simple-icon {
+    position: absolute;
+    top: 0;
+}
+
+.choose-us .why-choose.why-choose-left .simple-icon,
+.choose-us .why-choose.why-choose-right .simple-icon {
+    left: 0;
+}
+
+.why-choose .simple-icon i {
+    color: #6fa9a7;
+    font-size: 20px;
+    border: 2px solid #6fa9a7;
+    border-radius: 50%;
+    padding: 15px;
+}
+
+
+
+.why-choose .simple-icon i:hover {
+    color: #232929;
+    border: 2px solid #232929;
+}
+
+.why-choose-image {
+    margin-top: 30px;
+}
+
+@media (min-width: 992px) {
+    .choose-us .why-choose.why-choose-left {
+        padding-right: 100px;
+        padding-left: 0;
+        text-align: right;
+    }
+    .choose-us .why-choose.why-choose-left .simple-icon {
+        right: 0;
+        left: auto;
+    }
+}
+
+/* End why choose */
 
 
 /* Footer Contact Section */
 
 .contact-col {
-    background-color:#6fa9a7;
-    padding:25px;
+    background-color: #6fa9a7;
+    padding: 25px;
 }
 
-.contact-col p{
-    color:#fff;
-    text-align:center;
-    font-size:20px;
-    margin-top:10px;
-
+.contact-col p {
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 10px;
 }
 
 .contact-col span {
-    margin:10px 15px;
+    margin: 10px 15px;
 }
-.contact-col .phone-info i {
-    font-size:25px;
-    color:#fff;
-    margin:6px;
 
+.contact-col .phone-info i {
+    font-size: 25px;
+    color: #fff;
+    margin: 6px;
 }
 
 .contact-col .email-info i {
-    font-size:25px;
-    color:#fff;
-    margin:6px;
+    font-size: 25px;
+    color: #fff;
+    margin: 6px;
 }
-
 
 
 /* Footer Section */
 
 .footer-section {
-    background-color:#2d3333;
-
-
+    background-color: #2d3333;
 }
+
 .footer-logo {
-    margin-top:30px;
-    text-align:center;
+    margin-top: 30px;
+    text-align: center;
 }
 
-footer .footer-nav{
-    margin-top:25px;
-    text-align:center;
+footer .footer-nav {
+    margin-top: 25px;
+    text-align: center;
 }
 
 .footer-nav li {
-    display:inline-block;
-    width:18%;
+    display: inline-block;
+    width: 18%;
 }
 
 .footer-nav ul li {
-    display:inline-block;
-    padding:0;
-    text-align:left;
-    width:18%;
-
+    display: inline-block;
+    padding: 0;
+    text-align: left;
+    width: 18%;
 }
-
 
 .footer-nav ul li a {
     color: #8a9290;
@@ -719,36 +863,152 @@ footer .footer-nav{
     position: relative;
     text-decoration: none;
     font-family: 'Open Sans Condensed', 'sans-serif';
-    font-size:25px;
-
+    font-size: 25px;
 }
 
 .footer-nav ul li a:hover {
     color: #eee;
     text-decoration: underline;
-    
-    
 }
 
 .social-nav {
-    display:inline-block;
-    width:18%;
-    position:relative;
-    left:13px;
+    display: inline-block;
+    width: 18%;
+    position: relative;
+    left: 13px;
 }
 
-.social-nav ul{
-    display:inline;
-
-    
+.social-nav ul {
+    display: inline;
 }
 
 .who-are-we {
     position: relative;
-    left:80px;
+    left: 80px;
 }
 
 .contact-us {
     position: relative;
-    left:80px;
+    left: 80px;
+}
+
+
+/* Responsive  */
+
+
+/* xs */
+
+@media screen and (max-width: 768px) {
+    /* Jumbotron Section */
+    .jumbotron-content h1 {
+        font-size: 30px;
+    }
+    .jumbotron-buttons a {
+        padding: 8px 18px;
+        font-size: 14px;
+    }
+    .btn-large.btn-jumbo {
+        margin-left: 40px;
+    }
+    /* Welcome Section */
+    .welcome {
+        padding: 0px;
+        margin: 20px 0px;
+    }
+    .welcome-header {
+        font-size: 24px;
+        line-height: 26px;
+        padding: 0;
+        margin: 20px;
+    }
+    .welcome-main-header {
+        font-size: 30px;
+    }
+    .welcome-header span {
+        font-family: 'cabin sketch';
+        font-size: 28px;
+    }
+    .welcome:after {
+        display: none;
+    }
+    /*Services Section*/
+    .services {
+        padding: 0;
+    }
+    .service {
+        margin: 20px 40px;
+    }
+    .services .services-heading {
+        font-size: 45px;
+    }
+    .services-subheader {
+        font-size: 20px;
+    }
+    .services-paragraph {
+        font-size: 18px;
+        padding: 0;
+        padding-bottom: 20px;
+    }
+    .service .service-content h3 {
+        font-size: 18px;
+    }
+    /* Quote Section */
+    .work-with-us {
+        padding: 20px;
+    }
+    .work-text {
+        font-size: 24px;
+        color: #fff;
+        margin: 0;
+        text-align: center;
+    }
+    .btn_large.quote_btn {
+        border: 2px solid #fff;
+        padding: 8px 15px;
+        font-size: 18px;
+        text-align: center;
+        margin-left: 0;
+        margin-top: 25px;
+    }
+    .work-btn {
+        text-align: center;
+    }
+    .btn_large.quote_btn:hover {
+        padding: 8px 15px;
+        font-size: 18px;
+    }
+    /* Portfolio Section */
+    .portfolio-image {
+        text-align: center;
+        margin: 20px;
+    }
+    .image {
+        height: 20vh;
+        width: 100%;
+        padding: 0;
+        -webkit-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+        -moz-box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+        box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.5);
+    }
+    .portfolio-website-type {
+        display: none;
+    }
+}
+
+
+/* md */
+
+@media screen and (min-width: 992px) {
+    {
+        font-size: 1.2em;
+    }
+}
+
+
+/* lg */
+
+@media screen and (min-width: 1200px) {
+    {
+        font-size: 1.3em;
+    }
 }
